apparently openServerView already works, removed the new code